cluster/core/netpol/nzbget.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: nzbget
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nzbget-ingress
  namespace: nzbget
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          ns: traefik
      podSelector:
        matchLabels:
          app.kubernetes.io/name: traefik
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: sonarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: sonarr
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: radarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: radarr
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: prowlarr
      podSelector:
        matchLabels:
          app.kubernetes.io/name: prowlarr
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: hydra
      podSelector:
        matchLabels:
          app.kubernetes.io/name: nzbhydra2
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: home-automation
      podSelector:
        matchLabels:
          app.kubernetes.io/name: home-assistant
    ports:
    - port: 6789
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          ns: uptime
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: uptime-kuma
    ports:
    - protocol: TCP
      port: 6789
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nzbget-egress
  namespace: nzbget
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app.kubernetes.io/name: nzbget
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          ns: adguard
      podSelector:
        matchLabels:
          app.kubernetes.io/name: adguard-work
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 192.168.0.10/32
    ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
    ports:
    - port: 51820
      protocol: UDP
    - port: 443
      protocol: TCP
